maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:29: error: ':' expected but ')' found.
def isDirectionFree(dir)
                       ^PledgeMaze:48: error: identifier expected but '}' found.
}
^