maze.pledge.PledgeMaze.scala.code
override def run() {
  var sommeAngle=0
  if (isDirectionFree(Direction.NORD))
  {setDirection(Direction.NORD)}
  
  
  
  
}






def allerAuNord(){while (isDirectionFree(Direction.NORD))
                  {setDirection(Direction.NORD)
                   (avance)}}









def isDirectionFree(dir)

{val or=getDirection()
; setDirection(dir);
val e=estFaceMur();
setDirection(or);
 return(!e)}


def keepHandOnSideWall() {gauche ();
                          if (!estFaceMur())
                          {avance();return()}
                          droite();
                          if (!estFaceMur())
                          {avance;return()};
                          droite();}
                         
                          